syntax = "proto3";
import "google/protobuf/empty.proto";

option csharp_namespace = "gRPC.Server";

package fileWriter;

service FileWriter {
	rpc WriteFileInputInformation(stream WriteFileRequest) returns (WriteFileResponse);
	rpc GetAllFileTypes(google.protobuf.Empty) returns (FileTypes);
	rpc GetObjectsByFileTypeStream(GetObjectsByFileTypeRequest) returns (stream GetObjectsByFileTypeResponse);
}

message WriteFileRequest {
	string type = 1;
	string data = 2;
}

message WriteFileResponse {
	bool success = 1;
}

message FileTypes {
	repeated string types = 1;
}

message GetObjectsByFileTypeRequest {
	string fileType = 1;
}

message GetObjectsByFileTypeResponse {
	string type = 1;
	string data = 2;
}